Introduce pluggable system test serde providers (#909)
* Introduce pluggable system test serde providers

Decouple system test serialization from domain types. Test extension no longer needs direct knowledge of serde implementations or domain objects. Instead, serde modules provide KafkaSystemTestSerdeProvider implementations loaded via ServiceLoader.

  Key changes:

  New SPI (serde module):
  - KafkaSystemTestSerdeProvider — ServiceLoader interface for format-specific test serdes. Works with untyped data (primitives, maps, lists) instead of domain objects.
  - KafkaSerdeTestExtensionInitializer — SPI for serde modules to contribute extension options (e.g. schema registry config) during test init.
  - TypeNormaliser — Converts YAML-parsed types to topic-expected types (e.g. Integer→Long for long topics).
  - NativeKafkaSystemTestSerdeProvider — Native Kafka serde implementation for system tests.

  JSON serde module:
  - JsonSchemaSystemTestSerdeProvider — JSON schema system test serde implementation.
  - JsonSchemaTestExtensionInitializer — Contributes JSON schema extension options to test framework.
  - Rename SchemaFriendValidator → CreekSchemaValidator.
  - Extract JsonSchemaValidationFailed exception type.

  Test extension refactoring:
  - TestKafkaTopic — Wraps KafkaTopic with system test serde for serialize/deserialize/normalise.
  - SystemTestSerdeProviders — Loads and manages KafkaSystemTestSerdeProvider instances.
  - RecordNormaliser replaces RecordCoercer — Uses serde-specific normalisation instead of generic type coercion.
  - SchemaCollector — Extracts schema registry info from component descriptors.
  - SchemaRegistryContainerDef — Defines schema registry test containers.
  - SchemaRegistryEndpointsProvider replaces TestSchemaRegistryEndpointsLoader.
  - TopicInputHandler simplified — Delegates serialization to TestKafkaTopic instead of coerce+serialize inline.
  - TopicConsumer, TopicConsumers, TopicExpectationHandler updated to use TestKafkaTopic